--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,37 @@
-.App {
+
+
+
+html{
+  position: relative;
+  min-height: 100%;
+}
+body{
+  margin-bottom: 60px;
+}
+
+.App-logo {
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 15s linear;
+  }
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+
+
+/* .App {
   text-align: center;
 }
 
@@ -36,3 +69,4 @@
     transform: rotate(360deg);
   }
 }
+ */
